--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,13 +11,10 @@
 }
 
 @article{einstein1950meaning,
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
+  title={Characterizing the Effects of Random Subsampling on Lexicase Selection},
+  author={Austin J. Ferguson, Jose Guadalupe Hernandez, Daniel Junghans, Alexander Lalejini, Emily Dolson, and Charles Ofria},
+  journal={Genetic Programming Theory and Practice XVII,},
+  year={2020},
   publisher={American Association of Physics Teachers,}
 }
 
