--- a/_posts/2020-6-18-NEAT.markdown
+++ b/_posts/2020-6-18-NEAT.markdown
@@ -9,6 +9,9 @@ comments: false
 <p style="text-align: center;"><font size="+3">Introduction</font></p>
 Hello! My name is Daniel Junghans. I am an undergraduate business student that is working in Michigan State University's BEACON Center under the supervision of Dr. Charles Ofria. I began my current research project with a simple question: can I evolve an artificial neural network (ANN) to accurately predict the closing price of a stock? 
 
+<p style="text-align: center;"><font size="+3">Artificial Neural Networks</font></p>
+ANNs loosely resemble a brain and are made up of densely interconnected nodes. Instead of neurons and synapses, ANNs utilize artificial neurons (nodes) and connections.   
+
 <p style="text-align: center;"><font size="+3">NEAT</font></p>
 While researching ANNs, I was introduced to the [Neural Evolution of Augmenting Topologies](https://ieeexplore.ieee.org/abstract/document/1004508?casa_token=GvSoqJe__7oAAAAA:4MxGQXXGS6P-w3srDdBVwXhW0vGG8oF9TGfN9W-RmY3o_7dS5259uk6JBSAKauHqO4Fi1gtntw) (NEAT). NEAT was developed by Dr. Kenneth O. Stanely and is a method for evolving ANNs. I am using NEAT for this project because neuroevolution will help my ANNs explore the problem landscape.
 
@@ -16,7 +19,7 @@ While researching ANNs, I was introduced to the [Neural Evolution of Augmenting 
 For this project, I am using a stock with a highly volatile price. I want to use a stock with a highly volatile price because I believe it will lead to more versatile and complex algorithms. The company I am using is $TSLA because it meets my volatility requirement with a 52-week price range of $211.00 - $1027.48. 
 
 <p style="text-align: center;"><font size="+3">Stock Data</font></p>
-The financial data consists of historical trading data and technical indicators. There are 19 variables in my dataset which serve as inputs for my ANNs. The financial data I decided to use for this research project was largely influenced by [this paper](https://www-mitpressjournals-org.proxy1.cl.msu.edu/doi/full/10.1162/neco_a_01124).
+The financial data consists of historical trading data and technical indicators. There are 19 variables in my dataset which serve as inputs for my ANNs. The financial data I decided to use for this research project was largely influenced by [*Improving Stock Closing Price Prediction Using Recurrent Neural Network and Technical Indicators*](https://www-mitpressjournals-org.proxy1.cl.msu.edu/doi/full/10.1162/neco_a_01124).
 
 
 <p style="text-align: center;"><font size="+3">Neat-Python</font></p>
@@ -28,19 +31,19 @@ I used the [neat-python](https://neat-python.readthedocs.io/en/latest/) implemen
 <h4>Training and Testing Data</h4>
 The first thing my program does is split my financial dataset into two pieces. The first 70% of the dataset becomes the training data, and the last 30% of the dataset becomes the testing data. <br />
 
-<h4>Fitness</h4>
+<h4>Measuring Performance</h4>
 The training dataset is first randomly sampled. Then the ANNs produce outputs (closing price predictions) from the sampled data. While the ANNs produce outputs, their error
-is determined by subtracting the output from the expected output (closing stock price). 
+is determined by subtracting their output from the expected output (closing stock price). 
 <br />
 <h4>Speciation and Reproduction</h4>
-Once the ANNs have completed the training dataset, they are divided up into species based on genomic distance (this is a measure of how similar genomes are based on their structure). After all the ANNs have been put in a species, parents are selected to produce offspring through sexual and asexual reproduction. These offspring may be mutated and will be the next generation of ANNs. This cycle of fitness determination, speciation, selection, reproduction, and mutation will continue for N generations. 
+Once the ANNs have completed the training dataset, they are divided up into species based on genomic distance (this is a measure of how similar genomes are based on their structure i.e. nodes and connections). After all the ANNs have been put in a species, parents are selected to produce offspring through sexual and asexual reproduction. These offspring may be mutated and will be the next generation of ANNs. This cycle of measuring performance, speciation, selection, reproduction, and mutation will continue for N generations. 
 <br />
 <h4>Testing Data</h4>
-After N generations, my code checks to see if the fitness for the best ANN is lower than a threshold that I set. 
+After N generations, my code checks to see if the best ANN meets my performance threshold.  
 
-•	If the best ANN's fitness does not meet this threshold, then the ANNs continue to run on the training data for N generations. 
+•	If the best performing ANN does not meet this threshold, then the ANNs continue to run on the training data for N generations. 
 
-•	When the best ANN does meet this fitness threshold, the best neural network is run on the entire testing dataset. The outputs (stock price predictions) are recorded, and my code checks to see if the most fit neural network is good enough to stop running the program.  
+•	When the best ANN meets this performance threshold, it is run on the entire testing dataset. The outputs (stock price predictions) are recorded, and my code checks to see if the best neural network is good enough to stop running the program.  
 
 
 <p style="text-align: center;"><font size="+3">Exploratory Runs</font></p>
