--- a/_posts/2020-6-18-NEAT.markdown
+++ b/_posts/2020-6-18-NEAT.markdown
@@ -21,7 +21,7 @@ ANNs are inspired by biological brains and are made up of densely interconnected
 <h4>Input Layer</h4>
 All ANNs are made up of 3 types of layers. The first layer is the input layer. This is the initial data used by the neural networks. For this project, the input layer will consist of historical trading data. 
 <h4>Connections</h4>
-The lines connecting the inputs and nodes are called connections. These connections transmit information in the form of real numbers between units. Each connection has its own weight. The purpose of connections weights is to either strengthen or weaken the value that is being transmitted. ANNs learn by adjusting their connection weights. As ANNs learn, important connections will develop larger weights as unimportant connections become weaker. 
+The lines connecting the inputs and nodes are called connections. These connections transmit information in the form of real numbers between units. Each connection has its own weight. The purpose of connections weights is to either strengthen or weaken the value that is being transmitted. ANNs learn by adjusting their connection weights. As ANNs learn, important connections will develop larger weights as weights for unimportant connections become smaller. 
 
 <h4>Hidden Layers</h4>
 The second type of layer is the hidden layers. The hidden layers come before the output and is where all the computation is done. The nodes that make up the hidden layer sum up all the values recieved from connections and plug the result into a non-linear function.  
